<resources>
    <string name="subtype_en_US">English (US)</string>
    <string name="app_name_simplewedge">CSL Wedge</string>
    <string name="app_name_cs710">CS710S Java</string>
    <string name="app_name_cs108">CS108 Java</string>
    <string name="app_ime_simplewedge1">CSL Data Wedge</string>
    <string name="app_ime_simplewedge">CSL Java Simple Wedge</string>
    <string name="app_ime_cs710">CSL Java Wedge</string>
    <string name="app_ime_cs108">CS108 Java Wedge</string>
    <string name="title_activity_home_simplewedge">CSL Wedge</string>
    <string name="title_activity_home_cs710">CSL Java</string>
    <string name="title_activity_home_cs108">Convergence Systems</string>
    <string name="title_activity_special">Special Functions</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_connection">Connect</string>
    <string name="title_activity_inventory">Inventory</string>
    <string name="title_activity_geiger">Geiger search</string>
    <string name="title_activity_inventoryRfidMulti">Multibank</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_filters">Filters</string>
    <string name="title_activity_readwrite">Read / Write</string>
    <string name="title_activity_security">Security</string>
    <string name="title_activity_impinj">Impinj</string>
    <string name="title_activity_m775">ImpinJ M775</string>
    <string name="title_activity_autotune">ImpinJ Autotune</string>
    <string name="title_activity_alien">Alien</string>
    <string name="title_activity_ucode8">NXP UCODE 8</string>
    <string name="title_activity_ucodeDNA">UCODE DNA</string>
    <string name="title_activity_bap">BAP</string>
    <string name="title_activity_coldChain">Cold Chain</string>
    <string name="title_activity_auraSense">Aura-sense</string>
    <string name="title_activity_axzonSelector">Select Tag Type</string>
    <string name="title_activity_axzonConfig">Configuration</string>
    <string name="title_activity_axzon">Axzon</string>
    <string name="title_activity_emMicro">Magnus</string>
    <string name="title_activity_fdMicro">FM13DT160</string>
    <string name="title_activity_ctesisu">CTESIUS</string>
    <string name="title_activity_kiloway">KX2005X-BL</string>
    <string name="title_activity_longjing">EL-N2ESL</string>
    <string name="title_activity_registertag">Register tag</string>
    <string name="title_activity_readWriteUser">Long Read / Write</string>
    <string name="title_activity_simpleInventory">Simple Inventory</string>
    <string name="title_activity_tagBarInventory">TagBar Inventory</string>
    <string-array name="access_lock_privilege_array">
        <item>Unchanged</item>
        <item>Unlock</item>
        <item>Permanent Unlock</item>
        <item>Lock</item>
        <item>Permanent Lock</item>
    </string-array>
    <string-array name="memoryBank_options">
        <item>Reser</item>
        <item>EPC</item>
        <item>TID</item>
        <item>User</item>
    </string-array>
    <string-array name="read_memoryBank_options">
        <item>EPC</item>
        <item>TID</item>
        <item>User</item>
    </string-array>
    <string-array name="write_memoryBank_options">
        <item>EPC</item>
        <item>User</item>
    </string-array>
    <string-array name="write_Epc_options">
        <item>SGTIN - Serialized Global Trade Item Number</item>
        <item>SSCC - Serial Shipping Container Code</item>
        <item>SGLN - Serialized Global Location Number</item>
        <item>GRAI - Global Returnable Asset Identifier</item>
        <item>GIAI - Global Individual Asset Identifier</item>
        <item>GSRN - Global Service Relation Number, Recipient</item>
        <item>GSRNP - Global Service Relation Number, Provider</item>
        <item>GDTI - Global Document Type Identifier</item>
        <item>CPI - Component Part Identifier</item>
        <item>SGCN - Serialized Globald Coupon Number</item>
    </string-array>
    <string-array name="write_data_options">
        <item>No change</item>
        <item>Barcode before writing</item>
        <item>add 1 after writing</item>
    </string-array>
    <string-array name="fd_command_options">
        <item>Read/Write Memory</item>
        <item>Auth</item>
        <item>Get Temperature</item>
        <item>Start/Stop Logging</item>
        <item>Read/Write Reg</item>
        <item>Deep Sleep</item>
        <item>Op Mode Check</item>
        <item>Initial Regfile</item>
        <item>Led Ctrl</item>
    </string-array>
    <string-array name="fd_auth_options">
        <item>user area</item>
        <item>unlock</item>
        <item>stop logging</item>
    </string-array>
    <string-array name="fd_getSource_options">
        <item>temperature</item>
        <item>battery voltage</item>
        <item>external voltage</item>
        <item>external pressure sensore voltage</item>
    </string-array>
    <string-array name="dataType_options">
        <item>Hex</item>
        <item>Bit</item>
    </string-array>
    <string-array name="filterType_options">
        <item>NB_RSSI value filtering</item>
        <item>RSSI value filtering</item>
    </string-array>
    <string-array name="filter_options">
        <item>NB_RSSI/RSSI "&lt;"= threshold 1</item>
        <item>NB_RSSI/RSSI >= threshold 1</item>
        <item>NB_RSSI/RSSI == threshold 1</item>
        <item>NB_RSSI/RSSI "&lt;"= threshold 2 and >= threshold 1</item>
        <item>NB_RSSI/RSSI "&lt;"= threshold 1 and >= threshold 2</item>
    </string-array>
    <string-array name="filter_options1">
        <item>NB_RSSI/RSSI "&lt;"= threshold 1</item>
        <item>NB_RSSI/RSSI >= threshold 1</item>
    </string-array>
    <string-array name="filterPre_SLaction_options">
        <item>Match(assert SL), else(deassert SL)</item>
        <item>Match(assert SL), else(do nothing)</item>
        <item>Match(do nothing), else(deassert SL)</item>
        <item>Match(invert SL), else(do nothing)</item>
        <item>Match(deassert SL), else(assert SL)</item>
        <item>Match(deassert SL), else(do nothing)</item>
        <item>Match(do nothing), else(assert SL)</item>
        <item>Match(do nothing), else(invert SL)</item>
    </string-array>
    <string-array name="filterPre_SessionAction_options">
        <item>Match(inventory A), else(set inventory B)</item>
        <item>Match(inventory A), else(do nothing)</item>
        <item>Match(do nothing), else(inventory B)</item>
        <item>Match(toggle AB), else(do nothing)</item>
        <item>Match(inventory B), else(inventory A)</item>
        <item>Match(inventory B), else(do nothing)</item>
        <item>Match(do nothing), else(inventory A)</item>
        <item>Match(do nothing), else(toggle AB)</item>
    </string-array>
    <string-array name="filterPre_target_options">
        <item>Inventoried S0</item>
        <item>Inventoried S1</item>
        <item>Inventoried S2</item>
        <item>Inventoried S3</item>
        <item>SL</item>
    </string-array>
    <string-array name="admin_battery_options">
        <item>Voltage</item>
        <item>Percentage</item>
    </string-array>
    <string-array name="admin_rssi_options">
        <item>dBuV</item>
        <item>dBm</item>
    </string-array>
    <string-array name="admin_vibratemode_options">
        <item>New</item>
        <item>All</item>
    </string-array>
    <string-array name="admin_savingformat_options">
        <item>JSON</item>
        <item>CSV</item>
    </string-array>
    <string-array name="frequencyOrder_options">
        <item>Frequency hopping</item>
        <item>Fixed channel</item>
    </string-array>
    <string-array name="frequencyAgile_options">
        <item>Frequency agile</item>
        <item>Fixed channel</item>
    </string-array>
    <string-array name="hideTid_options">
        <item>hide none</item>
        <item>hide some</item>
        <item>hide all</item>
    </string-array>
    <string-array name="query_target_options">
        <item>A</item>
        <item>B</item>
        <item>Toggle A/B</item>
    </string-array>
    <string-array name="query_session_options">
        <item>S0</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
    </string-array>
    <string-array name="inventory_algorithm_options">
        <item>Dynamic</item>
        <item>Fixed</item>
    </string-array>
    <string-array name="profile_options">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="rflnagain_options">
        <item>1 dB</item>
        <item>7 dB</item>
        <item>13 dB</item>
    </string-array>
    <string-array name="iflnagain_options">
        <item>24 dB</item>
        <item>18 dB</item>
        <item>12 dB</item>
        <item>6 dB</item>
    </string-array>
    <string-array name="agcgain_options">
        <item>-12 dB</item>
        <item>-6 dB</item>
        <item>0 dB</item>
        <item>6 dB</item>
    </string-array>
    <string-array name="query_select_options">
        <item>All</item>
        <item>All</item>
        <item>~SL</item>
        <item>SL</item>
    </string-array>
    <string-array name="coldChain_unit_options">
        <item></item>
        <item>second</item>
        <item>minute</item>
        <item>hour</item>
        <item>sample interval</item>
    </string-array>
    <string-array name="coldChain_IntervalUnit_options">
        <item></item>
        <item>second</item>
        <item>minute</item>
        <item>hour</item>
        <item>5 minutes</item>
    </string-array>
    <string-array name="coldChain_enable_options">
        <item></item>
        <item>disable</item>
        <item>enable</item>
    </string-array>
    <string-array name="disable_enable_options">
        <item>disable</item>
        <item>enable</item>
    </string-array>
    <string-array name="coldChain_tagtype_options">
        <item>CS8300</item>
        <item>CS8304 Cold Chain</item>
        <item>Avery Maxdura</item>
    </string-array>
    <string-array name="xerxesTag_options">
        <item>All</item>
        <item>S2</item>
        <item>S3</item>
        <item>Xerxes</item>
        <item>Opus AZN5200-AFR</item>
    </string-array>
    <string name="password_title">Password</string>
    <string name="memory_bank_title">Memory Bank</string>
    <string name="kill_pwd_title">Kill PW</string>
    <string name="access_pwd_title">Access PW </string>
    <string name="epc_memory_title">EPC</string>
    <string name="tid_memory_title">TID Memory</string>
    <string name="user_mmeory_title">User Memory</string>
    <string name="settingAntennaPower_title">Antenna power(0-300)</string>
    <string name="settingQValue_title">Q Value(0-15)</string>
    <string name="settingRetry_title">Retry(0-255)</string>
    <string name="settingRunTilZero_title">Run til zero</string>
    <string name="settingInvSelectMaskData_title">Mask data</string>
    <string name="kill_title">KILL</string>
    <string name="save_title">SAVE</string>
    <string name="offset_bits_title">Bit Offset (decimal)</string>
    <string name="index_title">Index</string>
    <string name="target_title">Target</string>
    <string name="action_title">Action</string>
    <string name="enable_filter">Enable Filter</string>
    <string name="type_filter">match on ~EPC (not EPC)</string>
</resources>